src/test/ui/limits/huge-array.stderr
error: values of the type `[[u8; 1518599999]; 1518600000]` are too big for the current architecture
  --> $DIR/huge-array.rs:8:9
   |
LL |     let s: [T; 1518600000] = [t; 1518600000];
   |         ^

error: aborting due to previous error

